--- a/src/components/AdressInfo/AddressInfo.css
+++ b/src/components/AdressInfo/AddressInfo.css
@@ -4,23 +4,21 @@
   top: 19%;
   right: 0;
   left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 75%;
   height: 15%;
-  padding: 15px 50px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #ffffff;
-  border-radius: 15px;
 }
 
 .address-info_items {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  height: 80%;
+  max-width: 75%;
+  margin: 0 auto;
+  padding: 15px 50px;
   list-style: none;
+  background-color: #ffffff;
+  border-radius: 15px;
 }
 
 .address-info_item {
@@ -40,4 +38,29 @@
   margin-bottom: 10px;
   font-size: 1rem;
   font-weight: 400;
+}
+
+@media screen and (max-width: 980px) {
+  .address-info {
+    height: fit-content;
+  }
+
+  .address-info_items {
+    flex-direction: column;
+    max-width: fit-content;
+    padding: 15px 60px;
+  }
+
+  .address-info_item {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 0;
+    text-align: center;
+    border: none;
+  }
+
+  .address-info_item > h3 {
+    margin-bottom: 0;
+    font-size: 0.75rem;
+  }
 }
